Added diagrams import + export, fixed a few bugs

--- a/DreamTeamProj/WebContent/index.html
+++ b/DreamTeamProj/WebContent/index.html
@@ -42,18 +42,24 @@
     <script src="js/services/algorithmic-dependency-service.js"></script>
     <script src="js/services/object-service.js"></script>
     <script src="js/services/attribute-service.js"></script>
+    <script src="js/services/use-case-service.js"></script>
+    <script src="js/services/object-relations-service.js"></script>
+    <script src="js/services/er-service.js"></script>
     <script src="js/services/report-service.js"></script>
     <script src="js/services/statistic-service.js"></script>
     <script src="js/services/search-service.js"></script>
     <script src="js/services/sort-service.js"></script>
     <script src="js/services/filter-service.js"></script>
     <script src="js/services/link-constraint-service.js"></script>
+    <script src="js/services/actor-service.js"></script>
+    <script src="js/services/link-service.js"></script>
     <script src="js/services/attribute-constraint-service.js"></script>
     <script src="js/services/utils-service.js"></script>
     <script src="js/services/modals-service.js"></script>
 
     <script src="js/factories/data-loader-factory.js"></script>
     <script src="js/factories/common-controller-factory.js"></script>
+    <script src="js/factories/diagram-loader-factory.js"></script>
 
     <script src="js/directives/visible-directive.js"></script>
     <script src="js/directives/fileread-directive.js"></script>
