--- a/DreamTeamProj/WebContent/tpl/algorithmic-dependencies.html
+++ b/DreamTeamProj/WebContent/tpl/algorithmic-dependencies.html
@@ -27,20 +27,20 @@
                     <h4>Результирующий атрибут</h4>
                     <div class="btn-group">
                         <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
-                            {{dependency.resultField.object ? dependency.resultField.object.name : 'Выберите объект'}}
+                            {{dependency.resultField.name ? dependency.resultField.name : 'Выберите объект'}}
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li><a href="#" ng-repeat="object in objects" ng-click="setDestObj(object)">{{object.name}}</a></li>
                         </ul>
                     </div>
-                    <div class="btn-group" ng-show="dependency.resultField.object">
+                    <div class="btn-group" ng-show="dependency.resultField.name">
                         <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
-                            {{dependency.resultField.object.attr ? dependency.resultField.object.attr.name : 'Выберите атрибут'}}
+                            {{dependency.resultField.attr ? dependency.resultField.attr.name : 'Выберите атрибут'}}
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a href="#" ng-repeat="attr in getAttrs(dependency.resultField.object)" ng-click="setDestAttr(attr)">{{attr.name}}</a></li>
+                            <li><a href="#" ng-repeat="attr in getAttrs(dependency.resultField)" ng-click="setDestAttr(attr)">{{attr.name}}</a></li>
                         </ul>
                     </div>
                 </div>
@@ -60,26 +60,26 @@
                                 <tbody>
                                     <tr ng-repeat="source in dependency.sourceFields">
                                         <td>
-                                            <div class="btn-group">
-                                                <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                                            <!-- <div class="btn-group"> -->
+                                                <!-- <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle"> -->
                                                     {{source.object.name}}
-                                                    <span class="caret"></span>
-                                                </button>
-                                                <ul class="dropdown-menu">
+                                                    <!-- <span class="caret"></span> -->
+                                                <!-- </button> -->
+                                                <!-- <ul class="dropdown-menu">
                                                     <li><a href="#" ng-repeat="object in objects" ng-click="replaceSourceObj(source, object)">{{object.name}}</a></li>
                                                 </ul>
-                                            </div>
+                                            </div> -->
                                         </td>
                                         <td>
-                                            <div class="btn-group">
-                                                <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                                            <!-- <div class="btn-group"> -->
+                                                <!-- <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle"> -->
                                                     {{source.object.attr.name}}
-                                                    <span class="caret"></span>
+                                                    <!-- <span class="caret"></span>
                                                 </button>
                                                 <ul class="dropdown-menu">
                                                     <li><a href="#" ng-repeat="attr in getAttrs(source.object)" ng-click="replaceSourceAttr(source, attr)">{{attr.name}}</a></li>
                                                 </ul>
-                                            </div>
+                                            </div> -->
                                         </td>
                                         <td>
                                             <input type="text" class="form-control" readonly="true" ng-model="source.variable">
