fixet menu name, navigation links style

--- a/DreamTeamProj/WebContent/tpl/nav.html
+++ b/DreamTeamProj/WebContent/tpl/nav.html
@@ -4,7 +4,7 @@
             <ul>
                 <li class='active has-sub'>
                     <a href='#'>
-                        <span>Menu</span>
+                        <span>Меню</span>
                     </a>
                     <ul>
                         <li class=''>
