lnks to settings works cool

--- a/DreamTeamProj/WebContent/tpl/nav.html
+++ b/DreamTeamProj/WebContent/tpl/nav.html
@@ -13,7 +13,7 @@
                             </a>
                         </li>
                         <li class=''>
-                            <a href='' class="second" ng-click="goURL('settings.html');">
+                            <a href='' class="second" ng-click="goURL('settings.html#projects');">
                                 <span>Перейти к другому проекту</span>
                             </a>
                         </li>
@@ -36,7 +36,7 @@
                     </a>
                     <ul>
                         <li class=''>
-                            <a href='' class="first" ng-click="goURL('settings.html');">
+                            <a href='' class="first" ng-click="goURL('settings.html#profile');">
                                 <span>Редактировать информацию</span>
                             </a>
                         </li>
