--- a/DreamTeamProj/WebContent/settings.html
+++ b/DreamTeamProj/WebContent/settings.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="js/lib/angular.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
+    <script src="js/configs/locationProvider.js" type="text/javascript"></script>
     <script src="js/controllers/settings-controller.js" type="text/javascript"></script>
 
     <!--Online links:
@@ -18,7 +19,7 @@
     <title>Dashboard &ndash; User information &ndash; DataBases</title>
 </head>
 
-<body ng-controller="SettingsCtrl" data-ng-init="init()">
+<body ng-controller="SettingsCtrl">
     <div id="background">
         <div id="header" class="header settings-header">
             <div class="user-name-logout-block cursor-default">
@@ -30,11 +31,11 @@
             <div class="settings-links">
                 <div class="link-nav-block">
                     <i class="fa fa-home icons-grey"></i>
-                    <a href="" class="" ng-click="changeTab(1)">Главная - Панель инструментов</a>
+                    <a href="#profile" class="nav" ng-click="changeTab(1)">Главная - Панель инструментов</a>
                 </div>
                 <div ng-show="tab === 2" class="link-nav-block">
                     <i class="fa fa-angle-double-right icons-grey"></i>
-                    <a href="" class="" ng-click="changeTab(2)">Управление проектами</a>
+                    <a href="#projects" class="nav" ng-click="changeTab(2)">Управление проектами</a>
                 </div>
             </div>
             <hr class="divider"></hr>
