Add word form within the Document. fix diagram import

--- a/DreamTeamProj/WebContent/index.html
+++ b/DreamTeamProj/WebContent/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/modals.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/lib/joint/joint.css">
+    <link rel="stylesheet" type="text/css" href="css/document.css">
     <script type="text/javascript" src="js/lib/jquery-2.1.4.js"></script>
     <script type="text/javascript" src="js/lib/angular.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
@@ -63,6 +64,9 @@
 
     <script src="js/directives/visible-directive.js"></script>
     <script src="js/directives/fileread-directive.js"></script>
+    <script src="js/directives/source-document-directive.js"></script>
+    <script src="js/directives/document-article-directive.js"></script>
+    <script src="js/directives/document-word-directive.js"></script>
 
     <script src="js/controllers/dashboard-controller.js" type="text/javascript"></script>
     <script src="js/controllers/nav-controller.js" type="text/javascript"></script>
@@ -80,6 +84,7 @@
     <script src="js/controllers/modals-controller.js"></script>
     <script src="js/controllers/upload-doc-controller.js"></script>
     <script src="js/controllers/generate-doc-controller.js"></script>
+    <script src="js/controllers/document-article-controller.js"></script>
 
     <title>Document &ndash; Student project &ndash; DataBases</title>
 </head>
