--- a/DreamTeamProj/WebContent/tpl/document.html
+++ b/DreamTeamProj/WebContent/tpl/document.html
@@ -9,6 +9,6 @@
                 <span class="glyphicon glyphicon-book"></span>
             </button>
         </div>
-        <div id="doc-content-frame"></div>
+        <div id="doc-content-frame" source-document></div>
     </div>
 </div>
