--- a/DreamTeamProj/WebContent/tpl/projects.html
+++ b/DreamTeamProj/WebContent/tpl/projects.html
@@ -1,4 +1,4 @@
-<div class="projects-container">
+<div class="projects-container" ng-controller="setprojects">
     <div class="projects-tr" ng-repeat="project in projects">
         <div class="projects-title">
             {{ project.Title }}
