--- a/DreamTeamProj/WebContent/index.html
+++ b/DreamTeamProj/WebContent/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="js/lib/jquery-2.1.4.js"></script>
     <script type="text/javascript" src="js/lib/angular.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/upside-menu-script.js"></script>
 
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>-->
 
@@ -74,7 +74,6 @@
     <script src="js/controllers/nav-controller.js" type="text/javascript"></script>
     <script src="js/controllers/document-controller.js" type="text/javascript"></script>
     <script src="js/controllers/objects-attrs-controller.js" type="text/javascript"></script>
-    <script src="js/controllers/workenv-controller.js" type="text/javascript"></script>
     <script src="js/controllers/er-controller.js" type="text/javascript"></script>
     <script src="js/controllers/object-relations-controller.js "></script>
     <script src="js/controllers/use-case-controller.js "></script>
