--- a/DreamTeamProj/WebContent/settings.html
+++ b/DreamTeamProj/WebContent/settings.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="js/script.js"></script>
     <script src="js/configs/locationProvider.js" type="text/javascript"></script>
     <script src="js/controllers/settings-controller.js" type="text/javascript"></script>
+    <script src="js/controllers/settings-projects-controller.js" type="text/javascript"></script>
 
     <!--Online links:
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>-->
