Nav drawer + icons, add object form experimental

--- a/DreamTeamProj/WebContent/tpl/nav.html
+++ b/DreamTeamProj/WebContent/tpl/nav.html
@@ -1,5 +1,10 @@
 <div id="header" class="header" ng-controller="NavCtrl">
     <div class="project-menu">
+        <div class="menu-shrink-container">
+            <span class="menu-shrink" ng-click="shrinkMenu()">
+                <img src="css/icons/menu-alt.svg"/>
+            </span>
+        </div>
         <div id='cssmenu'>
             <ul>
                 <li class='active has-sub'>
