--- a/DreamTeamProj/WebContent/index.html
+++ b/DreamTeamProj/WebContent/index.html
@@ -95,23 +95,59 @@
     <div id="background">
         <div ng-include="'tpl/nav.html'" class="header"></div>
         <div id="main" class="main">
-            <div class="left-side">
+            <div class="left-side" ng-class="{'shrunk' : shrunk}">
                 <div class="pure-menu custom-restricted-width">
                     <ul class="pure-menu-list">
-                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 1}"><a href="" class="pure-menu-link" ng-click="tab = 1">Документ</a></li>
+                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 1}">
+                            <a href="" class="pure-menu-link glyphicon glyphicon-file" ng-click="tab = 1">
+                                <span class="not-shrunk-only">Документ</span>
+                            </a>
+                        </li>
                         <!-- <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 1}"><a href="#" class="pure-menu-link" ng-click="tab = 2">Объекты и атрибуты</a></li> -->
-                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 2}"><a href="" class="pure-menu-link" ng-click="tab = 2">Use-Case</a></li>
-                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 3}"><a href="" class="pure-menu-link" ng-click="tab = 3">Relations</a></li>
-                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 4}"><a href="" class="pure-menu-link" ng-click="tab = 4">ER-модель</a></li>
-                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 5}"><a href="" class="pure-menu-link" ng-click="tab = 5">Информационные <br> потребности</a></li>
-                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 6}"><a href="" class="pure-menu-link" ng-click="tab = 6">Статистики</a></li>
-                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 7}"><a href="" class="pure-menu-link" ng-click="tab = 7">Отчеты</a></li>
-                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 8}"><a href="" class="pure-menu-link" ng-click="tab = 8">Алгоритмические <br> зависимости</a></li>
-                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 9}"><a href="" class="pure-menu-link" ng-click="tab = 9">Ограничения целостности</a></li>
+                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 2}">
+                            <a href="" class="pure-menu-link glyphicon glyphicon-cog" ng-click="tab = 2">
+                                <span class="not-shrunk-only">Диаграмма Use-Case</span>
+                            </a>
+                            </li>
+                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 3}">
+                            <a href="" class="pure-menu-link glyphicon glyphicon-cog" ng-click="tab = 3">
+                                <span class="not-shrunk-only">Диаграмма взаимодействия</span>
+                            </a>
+                        </li>
+                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 4}">
+                            <a href="" class="pure-menu-link glyphicon glyphicon-cog" ng-click="tab = 4">
+                                <span class="not-shrunk-only">ER диаграмма</span>
+                            </a>
+                        </li>
+                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 5}">
+                            <a href="" class="pure-menu-link glyphicon glyphicon-info-sign" ng-click="tab = 5">
+                                <span class="not-shrunk-only">Информационные потребности</span>
+                            </a>
+                        </li>
+                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 6}">
+                            <a href="" class="pure-menu-link glyphicon glyphicon-cog" ng-click="tab = 6">
+                                <span class="not-shrunk-only">Статистики</span>
+                            </a>
+                        </li>
+                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 7}">
+                            <a href="" class="pure-menu-link glyphicon glyphicon-cog" ng-click="tab = 7">
+                                <span class="not-shrunk-only">Отчеты</span>
+                            </a>
+                        </li>
+                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 8}">
+                            <a href="" class="pure-menu-link glyphicon glyphicon-cog" ng-click="tab = 8">
+                                <span class="not-shrunk-only">Алгоритмические зависимости</span>
+                            </a>
+                        </li>
+                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 9}">
+                            <a href="" class="pure-menu-link glyphicon glyphicon-lock" ng-click="tab = 9">
+                                <span class="not-shrunk-only">Ограничения целостности</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <!-- <hr class="divider"></hr> -->
-                <div class="oe" ng-include="'tpl/objects-attrs.html'"></div>
+                <div class="oe" ng-hide="shrunk" ng-include="'tpl/objects-attrs.html'"></div>
             </div>
             <div class="extend-box">
                 <!-- <div visible="tab === 1" class="tile-container" ng-include="'tpl/objects-attributes.html'"></div> -->
