--- a/DreamTeamProj/WebContent/tpl/document-article.html
+++ b/DreamTeamProj/WebContent/tpl/document-article.html
@@ -1,10 +1,10 @@
-<div ng-show="addBoxOpened" class="article-add-box" ng-controller="DocumentArticleCtrl">
+<!-- <div ng-show="addBoxOpened" class="article-add-box" ng-controller="DocumentArticleCtrl">
     <ul class="nav nav-pills">
         <li role="presentation" class="active"><a href="#">Объект</a></li>
         <li role="presentation"><a href="#">Атрибут</a></li>
     </ul>
     <div class="added-words">
-        <span class="added-word" ng-repeat="addedWord in addedWords">{{addedWord}}</span>
+        <span class="added-word" ng-repeat="addedWord in addedWords">{{addedWord.word}}</span>
     </div>
     <form>
         <div class="form-group">
@@ -13,4 +13,31 @@
         </div>
         <button type="submit" class="btn btn-default">Добавить</button>
     </form>
+</div> -->
+<div class="panel panel-default article-add-box" ng-show="addBoxOpened" ng-controller="DocumentArticleCtrl">
+    <div class="panel-heading">
+        Добавить объект
+        <button type="button" class="close" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="panel-body">
+        <h5>Ссылки к документу</h5>
+        <div class="added-words well">
+            <span class="added-word" ng-repeat="addedWord in addedWords">{{addedWord.word}}</span>
+        </div>
+        <ul class="nav nav-pills add-type">
+            <li role="presentation" class="active"><a href="#">Объект</a></li>
+            <li role="presentation"><a href="#">Атрибут</a></li>
+        </ul>
+        <form>
+          <div class="form-group">
+            <label for="objectName">Название</label>
+            <input type="text" class="form-control" id="objectName" placeholder="Название">
+          </div>
+        </form>
+    </div>
+    <div class="panel-footer">
+        <button type="button" class="btn btn-primary">Добавить</button>
+    </div>
 </div>
