--- a/DreamTeamProj/WebContent/modals/generate-doc-modal.html
+++ b/DreamTeamProj/WebContent/modals/generate-doc-modal.html
@@ -6,16 +6,18 @@
                 <h4 class="modal-title">Генерация документа</h4>
             </div>
             <div class="modal-body">
-                <h5 class="info">Подождите, пока документ сгенерируется</h5>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                        <span class="sr-only">Генерируем</span>
+                <div ng-show="documentStatus == 'generating'">
+                    <h5 class="info">Подождите, пока документ сгенерируется</h5>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                            <span class="sr-only">Генерируем</span>
+                        </div>
                     </div>
                 </div>
-                <button type="button" class="btn btn-default" aria-label="Left Align">
+                <a ng-show="documentStatus == 'ready'" id="download-doc" type="button" class="btn btn-default" aria-label="Left Align">
                     <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
                     Скачать документ
-                </button>
+                </a>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Отмена</button>
