--- a/DreamTeamProj/src/main/webapp/app/states/login.html
+++ b/DreamTeamProj/src/main/webapp/app/states/login.html
@@ -12,9 +12,10 @@
                     <label class="control-label" for="email">Адрес E-mail:</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
-                        <input fullname="email" type="text" id="email" class="form-control" value=""
+                        <input name="email" type="text" id="email" class="form-control" value=""
                                autofocus="autofocus" tabindex="2" placeholder="test@example.com"/>
                     </div>
+                    <span class="help-block"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="password">Пароль:</label>
@@ -24,6 +25,7 @@
                                class="form-control" value="" tabindex="2"
                                placeholder="Пароль"/>
                     </div>
+                    <span class="help-block"></span>
                 </div>
                 <div class="panel-footer bord-trans">
                     <button type="button" tabindex="4"  data-style="slide-up"
