--- a/DreamTeamProj/src/main/webapp/app/index.html
+++ b/DreamTeamProj/src/main/webapp/app/index.html
@@ -2,10 +2,11 @@
 <html ng-app="db" lang="en">
 
 <head>
+    <!--<base href="/web/">-->
     <meta charset="utf-8">
     <meta lang="ru">
-    <meta fullname="description" content="A tool for studying DataBases.">
-    <meta fullname="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A tool for studying DataBases.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document &ndash; Student project &ndash; DataBases</title>
 
     <link rel="stylesheet" href="css/main.css" />
