--- a/DreamTeamProj/src/main/webapp/app/states/login.html
+++ b/DreamTeamProj/src/main/webapp/app/states/login.html
@@ -1,43 +1,57 @@
-<div id="login" ng-controller="LoginCtrl">
-    <div id="login-panel">
-        <div id="login-header">
-            <h1 class="text-center">Cache</h1>
+<div class="landing-background" ng-controller="LoginCtrl">
+    <div class="landing-main">
+        <div class="landing-main__header">
+            <h1 class="header__line">DB</h1>
             <hr/>
-            <h4 class="text-center">Log In</h4>
+            <h4 class="header__line">Авторизация</h4>
             <hr/>
         </div>
-        <div class="front panel">
-            <form id="login_form">
-                <div class="form-group">
+        <div class="landing-panel panel">
+            <form class="landing-form" name="loginForm" role="form" ng-submit="login()">
+
+                <div class="form-group" ng-class="{'has-error': hasErrors('email')}">
                     <label class="control-label" for="email">Адрес E-mail:</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
-                        <input name="email" type="text" id="email" class="form-control" value=""
-                               autofocus="autofocus" tabindex="2" placeholder="test@example.com"/>
+                        <input name="email" type="email" id="email" class="form-control" value=""
+                               autofocus="autofocus" tabindex="2" placeholder="test@example.com" required
+                               ng-model="data.email"/>
                     </div>
-                    <span class="help-block"></span>
+                    <span class="help-block" ng-show="hasErrors('email')"
+                          ng-messages="loginForm.email.$error">
+                        <p ng-message="email">Invalid format.</p>
+                        <p ng-message="required">Your email is required.</p>
+                    </span>
                 </div>
-                <div class="form-group">
-                    <label class="control-label" for="password">Пароль:</label>
+
+                <div class="form-group" ng-class="{'has-error': hasErrors('password')}">
+                    <label class="control-label" for="password">
+                        Пароль:
+                    </label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
-                        <input name="password" type="password" id="password"
-                               class="form-control" value="" tabindex="2"
-                               placeholder="Пароль"/>
+                        <input name="password" type="password" id="password" class="form-control" tabindex="3"
+                               ng-model="data.password" placeholder="Пароль" required ng-minlength="6"/>
                     </div>
-                    <span class="help-block"></span>
+                    <span class="help-block" ng-show="hasErrors('password')"
+                          ng-messages="loginForm.password.$error">
+                        <p ng-message="minlength">Provided password is too short.</p>
+                        <p ng-message="required">Your password is required.</p>
+                    </span>
                 </div>
+
                 <div class="panel-footer bord-trans">
-                    <button type="button" tabindex="4"  data-style="slide-up"
+                    <button name="submitLogin" tabindex="4"
+                            ladda="loggingIn" type="submit"
                             class="btn btn-default btn-lg btn-block ladda-button"
+                            data-style="slide-up" ng-disabled="registerForm.$invalid"
                             data-spinner-color="black">
-                        <span class="ladda-label">
-                            <i class="icon-check text-success"></i>
-                            Войти
-                        </span>
+                        Войти
                     </button>
                 </div>
+
             </form>
         </div>
     </div>
 </div>
+
