--- a/DreamTeamProj/src/main/webapp/app/states/register.html
+++ b/DreamTeamProj/src/main/webapp/app/states/register.html
@@ -1,13 +1,14 @@
-<div id="login" ng-controller="RegisterCtrl">
-    <div id="login-panel">
-        <div id="login-header">
-            <h1 class="text-center">DB</h1>
+<div class="landing-background" ng-controller="RegisterCtrl">
+    <div class="landing-main">
+        <div class="landing-main__header">
+            <h1 class="header__line">DB</h1>
             <hr/>
-            <h4 class="text-center">Регистрация</h4>
+            <h4 class="header__line">Регистрация</h4>
             <hr/>
         </div>
-        <div class="front panel">
-            <form name="registerForm">
+        <div class="landing-panel panel">
+            <form class="landing-form" name="registerForm" role="form" ng-submit="register()">
+
                 <div class="form-group" ng-class="{'has-error': hasErrors('fullname')}">
                     <label class="control-label" for="email">Имя:</label>
                     <div class="input-group">
@@ -26,12 +27,13 @@
                     </span>
 
                 </div>
+
                 <div class="form-group" ng-class="{'has-error': hasErrors('email')}">
                     <label class="control-label" for="email">Адрес E-mail:</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
                         <input name="email" type="email" id="email" class="form-control" value=""
-                               autofocus="autofocus" tabindex="1" placeholder="test@example.com" required
+                               autofocus="autofocus" tabindex="2" placeholder="test@example.com" required
                                ng-model="data.email"/>
                     </div>
                     <span class="help-block" ng-show="hasErrors('email')"
@@ -40,13 +42,14 @@
                         <p ng-message="required">Your email is required.</p>
                     </span>
                 </div>
+
                 <div class="form-group" ng-class="{'has-error': hasErrors('password')}">
                     <label class="control-label" for="password">
                         Пароль:
                     </label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
-                        <input name="password" type="password" id="password" class="form-control" tabindex="2"
+                        <input name="password" type="password" id="password" class="form-control" tabindex="3"
                                ng-model="data.password" placeholder="Пароль" required ng-minlength="6"/>
                     </div>
                     <span class="help-block" ng-show="hasErrors('password')"
@@ -55,26 +58,35 @@
                         <p ng-message="required">Your password is required.</p>
                     </span>
                 </div>
-                <div class="form-group">
-                    <label class="control-label" for="password">
+
+                <div class="form-group" ng-class="{'has-error': hasErrors('passwordRe')}">
+                    <label class="control-label" for="passwordRe">
                         Повторите пароль:
                     </label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
-                        <input name="passwordRe" type="password" id="passwordRe" class="form-control" tabindex="2"
-                               ng-model="data.passwordRe" placeholder="Повторите пароль"/>
+                        <input name="passwordRe" type="password"
+                               id="passwordRe" class="form-control" tabindex="4"
+                               ng-model="data.passwordRe" match="data.password"
+                               placeholder="Повторите пароль" required/>
                     </div>
-                    <span class="help-block"></span>
+                    <span class="help-block" ng-show="hasErrors('passwordRe')"
+                          ng-messages="registerForm.passwordRe.$error">
+                        <p ng-message="required">This is required.</p>
+                        <p ng-message="match">Passwords should match.</p>
+                    </span>
                 </div>
+
                 <div class="panel-footer bord-trans">
                     <button name="submitLogin" tabindex="4"
-                            ladda="registering"
+                            ladda="registering" type="submit"
                             class="btn btn-default btn-lg btn-block ladda-button"
                             data-style="slide-up" ng-disabled="registerForm.$invalid"
-                            data-spinner-color="black" ng-click="submitRegister()">
+                            data-spinner-color="black">
                         Регистрация
                     </button>
                 </div>
+
             </form>
         </div>
     </div>
