Implemented logout, added authentication frontend handling, restyled

--- a/DreamTeamProj/src/main/webapp/app/index.html
+++ b/DreamTeamProj/src/main/webapp/app/index.html
@@ -17,7 +17,7 @@
     <!-- endbower -->
 </head>
 
-<body ng-controller="AppCtrl">
+<body>
     <div ng-include="'templates/header.html'" class="header"></div>
     <div class="main" class="main" ui-view></div>
 
