--- a/DreamTeamProj/src/main/webapp/app/states/register.html
+++ b/DreamTeamProj/src/main/webapp/app/states/register.html
@@ -80,7 +80,7 @@
                 <div class="panel-footer bord-trans">
                     <button name="submitLogin" tabindex="4"
                             ladda="registering" type="submit"
-                            class="btn btn-default btn-lg btn-block ladda-button"
+                            class="btn btn-default btn-lg btn-block ladda-button ladda-button--primary"
                             data-style="slide-up" ng-disabled="registerForm.$invalid"
                             data-spinner-color="black">
                         Регистрация
