Error handling + projects dao, service and controller

--- a/DreamTeamProj/src/main/webapp/app/states/login.html
+++ b/DreamTeamProj/src/main/webapp/app/states/login.html
@@ -44,7 +44,7 @@
                     <button name="submitLogin" tabindex="4"
                             ladda="loggingIn" type="submit"
                             class="btn btn-default btn-lg btn-block ladda-button ladda-button--primary"
-                            data-style="slide-up" ng-disabled="registerForm.$invalid"
+                            data-style="slide-up" ng-disabled="loginForm.$invalid"
                             data-spinner-color="black">
                         Войти
                     </button>
