Refactored styles, implemented entities, attrs box

--- a/DreamTeamProj/src/main/webapp/app/modals/error-modal.html
+++ b/DreamTeamProj/src/main/webapp/app/modals/error-modal.html
@@ -1,13 +1,13 @@
 <div class="modal-head modal--error__head">
-    <div class="modal--error__title">
+    <div class="modal--custom__title">
         <i class="fa fa-exclamation-triangle"></i>
         Error
     </div>
 </div>
 <div class="modal-body">
-    <p class="modal--error__message">{{message}}</p>
+    <p class="modal--custom__message">{{message}}</p>
 </div>
-<div class="modal-footer modal--error__footer">
+<div class="modal-footer modal--custom__footer">
     <button class="md-button md-button--flat md-button--flat--primary"
             type="button" ng-click="ok()">OK</button>
 </div>
