--- a/DreamTeamProj/src/main/webapp/app/modals/project-modal.html
+++ b/DreamTeamProj/src/main/webapp/app/modals/project-modal.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3 class="modal-title">Create project</h3>
+    <h3 class="modal-title">{{mode === 'create' ? 'Create project' : 'Update project'}}</h3>
 </div>
 <div class="modal-body">
     <form name="projectForm" role="form">
