Fixing injection error

--- a/DreamTeamProj/src/main/webapp/app/states/project.html
+++ b/DreamTeamProj/src/main/webapp/app/states/project.html
@@ -49,6 +49,9 @@
             </li>
         </ul>
     </div>
+    <div class="menu-shrink">
+        <i class="fa fa-chevron-left"></i>
+    </div>
 </div>
 <div class="extend-box">
     <div class="tile-container" ui-view></div>
